[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/ui/button_music_on.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/button_music_off.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/button_sfx_on.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/button_sfx_off.png" type="Texture" id=4]
[ext_resource path="res://tres/default_theme.tres" type="Theme" id=5]
[ext_resource path="res://tres/central_panel_style.tres" type="StyleBox" id=6]
[ext_resource path="res://scenes/ui/SettingsPage.gd" type="Script" id=9]
[ext_resource path="res://scenes/ui/TutorialsPage.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/ui/AboutPage.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[node name="SettingsPage" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Close" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterC" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="CenterC"]
margin_left = 448.0
margin_top = 200.0
margin_right = 832.0
margin_bottom = 520.0
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxC" type="VBoxContainer" parent="CenterC/Panel"]
margin_right = 384.0
margin_bottom = 320.0
rect_min_size = Vector2( 384, 320 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageTitle" type="Label" parent="CenterC/Panel/VBoxC"]
margin_right = 384.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 3 )
text = "Settings"
align = 1
valign = 1

[node name="HBoxC" type="HBoxContainer" parent="CenterC/Panel/VBoxC"]
margin_top = 48.0
margin_right = 384.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32
alignment = 1

[node name="Music" type="TextureButton" parent="CenterC/Panel/VBoxC/HBoxC"]
margin_left = 112.0
margin_right = 176.0
margin_bottom = 68.0
rect_min_size = Vector2( 64, 0 )
size_flags_horizontal = 4
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="SFX" type="TextureButton" parent="CenterC/Panel/VBoxC/HBoxC"]
margin_left = 208.0
margin_right = 272.0
margin_bottom = 68.0
rect_min_size = Vector2( 64, 0 )
size_flags_horizontal = 4
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Languages" type="Button" parent="CenterC/Panel/VBoxC"]
margin_top = 116.0
margin_right = 384.0
margin_bottom = 184.0
rect_min_size = Vector2( 384, 64 )
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Languages"
expand_icon = true

[node name="Tutorials" type="Button" parent="CenterC/Panel/VBoxC"]
margin_top = 184.0
margin_right = 384.0
margin_bottom = 252.0
rect_min_size = Vector2( 384, 64 )
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Tutorials"
expand_icon = true

[node name="About" type="Button" parent="CenterC/Panel/VBoxC"]
margin_top = 252.0
margin_right = 384.0
margin_bottom = 320.0
rect_min_size = Vector2( 384, 64 )
size_flags_horizontal = 4
size_flags_vertical = 3
text = "About"
expand_icon = true

[node name="TutorialsPage" parent="." instance=ExtResource( 10 )]
visible = false

[node name="AboutPage" parent="." instance=ExtResource( 11 )]
visible = false

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="toggled" from="CenterC/Panel/VBoxC/HBoxC/Music" to="." method="_on_Music_toggled"]
[connection signal="toggled" from="CenterC/Panel/VBoxC/HBoxC/SFX" to="." method="_on_SFX_toggled"]
[connection signal="pressed" from="CenterC/Panel/VBoxC/Languages" to="." method="_on_Languages_pressed"]
[connection signal="pressed" from="CenterC/Panel/VBoxC/Tutorials" to="." method="_on_Tutorials_pressed"]
[connection signal="pressed" from="CenterC/Panel/VBoxC/About" to="." method="_on_About_pressed"]
